# gexnet

./: .gitattributes  CMakeLists.txt  LICENSE  build.cmd
include/: builder.h  feedforward.h  gexnet.h  graph.h  graph_dot.h  memory.h  network.h  processors.h  stream.h  types.h
src/: builder.c  feedforward.c  gexnet_native.c  graph.c  graph_dot.c  memory.c  network.c  processors.c
test/: CMakeLists.txt  test_network.c
